--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -209,7 +209,8 @@
     <i class="fas fa-angle-up"></i>
   </a>
 
-
+{% block modals %}
+{% endblock %}
 
 <script src="https://unpkg.com/popper.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
