--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,8 +2,12 @@
 <html lang="en">
 
 <head>
+    <title>{{ title }}</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:title" content="DGVOST - {{ title }}" />
+    <meta property="og:type" content="website" />
+    <meta name="theme-color" content="#4e73df">
     <link type="text/css" href="/static/css/sb-admin-2.css" rel="stylesheet" />
     <link type="text/css" href="/static/js/plugins/nucleo/css/nucleo.css" rel="stylesheet" />
     <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet" />
