--- a/app/templates/deployments.html
+++ b/app/templates/deployments.html
@@ -32,7 +32,7 @@
         <div class="card border-left-success shadow mb-4">
             <div class="card-header d-flex align-items-center justify-content-between">
                 <h6 class="font-weight-bold text-primary">{{ deployment.name }}
-                    <p class="mb-0 mt-1 text-muted text-xs text-nowrap">Created {{ moment(deployment.created_at).fromNow() }}</p>
+                    <p class="mb-0 mt-1 text-muted text-xs text-nowrap">Created {{ moment(deployment.created_at).fromNow(refresh=True) }}</p>
                 </h6>
                 <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" data-toggle="modal" data-target="#editDeploymentModal">
