Disable sorting on the pinned column.
#16 is now complete unless further searching capabilities is added.

--- a/app/templates/incidents.html
+++ b/app/templates/incidents.html
@@ -266,6 +266,10 @@
 $(document).ready(function() {
     $('#dataTable').DataTable({
         "columnDefs": [
+            {   "targets": [ 0 ],
+                "orderable": false,
+                "searchable": false
+            },
             {
                 "targets": [ 7 ],
                 "visible": false,
