--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,7 @@
     <meta property="og:title" content="DGVOST - {{ title }}" />
     <meta property="og:type" content="website" />
     <meta name="theme-color" content="#4e73df">
+    <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon" />
     <link type="text/css" href="/static/css/sb-admin-2.css" rel="stylesheet" />
     <link type="text/css" href="/static/js/plugins/nucleo/css/nucleo.css" rel="stylesheet" />
     <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet" />
