--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,6 +7,7 @@
     <meta property="og:title" content="DGVOST - {{ title }}" />
     <meta property="og:type" content="website" />
     <meta name="theme-color" content="#4e73df">
+    <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon" />
     <link type="text/css" href="/static/css/sb-admin-2.css" rel="stylesheet">
 </head>
 
