--- a/app/templates/incidents.html
+++ b/app/templates/incidents.html
@@ -115,7 +115,7 @@
                         {% if current_user in incident.pinned %}
                         <i class="fas fa-thumbtack"></i>
                         {% else %}
-                        <i class="fas fa-thumbtack"></i>
+                        <i class="fas fa-thumbtack not-pinned"></i>
                         {% endif %}
                     </th>
                     <td scope="row">
