--- a/app/static/css/sb-admin-2.css
+++ b/app/static/css/sb-admin-2.css
@@ -2367,8 +2367,8 @@ fieldset:disabled a.btn {
 
 .btn-info:hover {
   color: #fff;
-  background-color: #2c9faf;
-  border-color: #2a96a5;
+  background-color: #068ace;
+  border-color: #068ace;
 }
 
 .btn-info:focus, .btn-info.focus {
@@ -9589,7 +9589,7 @@ a:focus {
   height: 2.75rem;
   text-align: center;
   color: #fff;
-  background: #32325d;
+  background: #1d1d2b;
   line-height: 46px;
 }
 
