--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <title>{{ title }}</title>
     <meta charset="utf-8" />
@@ -16,207 +15,171 @@
     {% block css %}
     {% endblock %}
 </head>
-
 <body id="page-top">
-
-  <!-- Page Wrapper -->
-  <div id="wrapper">
-
-      {% if nosidebar is not defined %}
-    <!-- Sidebar -->
-    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-
-      <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ url_for('view_deployments') }}">
-        <img class="mx-4" src="/static/img/Logos/White.png">
-      </a>
-
-      <!-- Divider -->
-      <hr class="sidebar-divider my-0">
-
-      <!-- Nav Item - Deployments -->
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('view_deployments') }}">
-          <i class="fas fa-fw fa-list"></i>
-          <span>Deployments</span></a>
-      </li>
-
-      <!-- Divider -->
-      <hr class="sidebar-divider">
-
-      <!-- Heading -->
-      <div class="sidebar-heading">
-        {{ deployment_name }}
-      </div>
-
-      <li class="nav-item{% if incidents_active is defined %} active{% endif %}">
-        <a class="nav-link" href="{{ url_for('view_incidents', deployment_name=deployment_name) }}">
-          <i class="fas fa-fw fa-clone"></i>
-          <span>Incidents</span></a>
-      </li>
-
-      <li class="nav-item{% if notifications_active is defined %} active{% endif %}">
-        <a class="nav-link" href="{{ url_for('view_notifications') }}">
-          <i class="fas fa-fw fa-bell"></i>
-          <span>Notifications</span></a>
-      </li>
-
-        <li class="nav-item{% if map_active is defined %} active{% endif %}">
-        <a class="nav-link" href="{{ url_for('view_map', deployment_name=deployment_name) }}">
-          <i class="fas fa-fw fa-map-marker-alt"></i>
-          <span>Map</span></a>
-      </li>
-
-        <li class="nav-item{% if live_feed_active is defined %} active{% endif %}">
-        <a class="nav-link" href="{{ url_for('view_live_feed', deployment_name=deployment_name) }}">
-          <i class="fas fa-fw fa-rss"></i>
-          <span>Live Feed</span></a>
-      </li>
-
-        <li class="nav-item{% if decision_making_log_active is defined %} active{% endif %}">
-        <a class="nav-link" href="{{ url_for('view_decision_making_log', deployment_name=deployment_name) }}">
-          <i class="fas fa-fw fa-pen"></i>
-          <span>Decision-Making Log</span></a>
-      </li>
-
-      <!-- Divider -->
-      <hr class="sidebar-divider d-none d-md-block">
-
-      <!-- Sidebar Toggler (Sidebar) -->
-      <div class="text-center d-none d-md-inline">
-        <button class="rounded-circle border-0" id="sidebarToggle"></button>
-      </div>
-
-    </ul>
-      {% endif %}
-    <!-- End of Sidebar -->
-
-    <!-- Content Wrapper -->
-    <div id="content-wrapper" class="d-flex flex-column">
-
-      <!-- Main Content -->
-      <div id="content">
-
-        <!-- Topbar -->
-        <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-            {% if nosidebar is defined %}
-            <a class="deployments_brand_img" href="{{ url_for('view_deployments') }}">
-                <img class="deployments_brand_img" src="/static/img/Logos/Default.png">
+    <!-- Page Wrapper -->
+    <div id="wrapper">
+        {% if nosidebar is not defined %}
+        <!-- Sidebar -->
+        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+            <!-- Sidebar - Brand -->
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ url_for('view_deployments') }}">
+            <img class="mx-4" src="/static/img/Logos/White.png">
             </a>
-            {% endif %}
-          {% if nosidebar is not defined %}
-          <!-- Sidebar Toggle (Topbar) -->
-          <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-            <i class="fa fa-bars"></i>
-          </button>
-          {% endif %}
-
-
-          <!-- Topbar Navbar -->
-          <ul class="navbar-nav ml-auto">
-
-            <li class="nav-item dropdown no-arrow d-sm-none">
-              <!-- Dropdown - Messages -->
-              <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" aria-labelledby="searchDropdown">
-                <form class="form-inline mr-auto w-100 navbar-search">
-                  <div class="input-group">
-                    <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
-                    <div class="input-group-append">
-                      <button class="btn btn-primary" type="button">
-                        <i class="fas fa-search fa-sm"></i>
-                      </button>
+            <!-- Divider -->
+            <hr class="sidebar-divider my-0">
+            <!-- Nav Item - Deployments -->
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('view_deployments') }}">
+                <i class="fas fa-fw fa-list"></i>
+                <span>Deployments</span></a>
+            </li>
+            <!-- Divider -->
+            <hr class="sidebar-divider">
+            <!-- Heading -->
+            <div class="sidebar-heading">
+                {{ deployment_name }}
+            </div>
+            <li class="nav-item{% if incidents_active is defined %} active{% endif %}">
+                <a class="nav-link" href="{{ url_for('view_incidents', deployment_name=deployment_name) }}">
+                <i class="fas fa-fw fa-clone"></i>
+                <span>Incidents</span></a>
+            </li>
+            <li class="nav-item{% if notifications_active is defined %} active{% endif %}">
+                <a class="nav-link" href="{{ url_for('view_notifications') }}">
+                <i class="fas fa-fw fa-bell"></i>
+                <span>Notifications</span></a>
+            </li>
+            <li class="nav-item{% if map_active is defined %} active{% endif %}">
+                <a class="nav-link" href="{{ url_for('view_map', deployment_name=deployment_name) }}">
+                <i class="fas fa-fw fa-map-marker-alt"></i>
+                <span>Map</span></a>
+            </li>
+            <li class="nav-item{% if live_feed_active is defined %} active{% endif %}">
+                <a class="nav-link" href="{{ url_for('view_live_feed', deployment_name=deployment_name) }}">
+                <i class="fas fa-fw fa-rss"></i>
+                <span>Live Feed</span></a>
+            </li>
+            <li class="nav-item{% if decision_making_log_active is defined %} active{% endif %}">
+                <a class="nav-link" href="{{ url_for('view_decision_making_log', deployment_name=deployment_name) }}">
+                <i class="fas fa-fw fa-pen"></i>
+                <span>Decision-Making Log</span></a>
+            </li>
+            <!-- Divider -->
+            <hr class="sidebar-divider d-none d-md-block">
+            <!-- Sidebar Toggler (Sidebar) -->
+            <div class="text-center d-none d-md-inline">
+                <button class="rounded-circle border-0" id="sidebarToggle"></button>
+            </div>
+        </ul>
+        {% endif %}
+        <!-- End of Sidebar -->
+        <!-- Content Wrapper -->
+        <div id="content-wrapper" class="d-flex flex-column">
+            <!-- Main Content -->
+            <div id="content">
+                <!-- Topbar -->
+                <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+                    {% if nosidebar is defined %}
+                    <a class="deployments_brand_img" href="{{ url_for('view_deployments') }}">
+                    <img class="deployments_brand_img" src="/static/img/Logos/Default.png">
+                    </a>
+                    {% endif %}
+                    {% if nosidebar is not defined %}
+                    <!-- Sidebar Toggle (Topbar) -->
+                    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+                    <i class="fa fa-bars"></i>
+                    </button>
+                    {% endif %}
+                    <!-- Topbar Navbar -->
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item dropdown no-arrow d-sm-none">
+                            <!-- Dropdown - Messages -->
+                            <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" aria-labelledby="searchDropdown">
+                                <form class="form-inline mr-auto w-100 navbar-search">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+                                        <div class="input-group-append">
+                                            <button class="btn btn-primary" type="button">
+                                            <i class="fas fa-search fa-sm"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </li>
+                        <!-- Nav Item - Alerts -->
+                        <li class="nav-item dropdown no-arrow mx-1">
+                            <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fas fa-bell fa-fw"></i>
+                                <!-- Counter - Alerts -->
+                                <span class="badge badge-danger badge-counter"></span>
+                            </a>
+                            <!-- Dropdown - Alerts -->
+                            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
+                                <h6 class="dropdown-header">
+                                    Alerts Center
+                                </h6>
+                                <a class="dropdown-item text-center small text-gray-500" href="#">No Alerts</a>
+                            </div>
+                        </li>
+                        <div class="topbar-divider d-none d-sm-block"></div>
+                        <!-- Nav Item - User Information -->
+                        <li class="nav-item dropdown no-arrow">
+                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ current_user }}</span>
+                            <img class="img-profile rounded-circle" src="{{ current_user.get_avatar() }}">
+                            </a>
+                            <!-- Dropdown - User Information -->
+                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
+                                <a class="dropdown-item" href="#">
+                                <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                                Profile
+                                </a>
+                                <a class="dropdown-item" href="#">
+                                <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+                                Settings
+                                </a>
+                                <a class="dropdown-item" href="#">
+                                <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                                Activity Log
+                                </a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="{{ url_for('logout') }}">
+                                <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                                Logout
+                                </a>
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
+                <!-- End of Topbar -->
+                <!-- Begin Page Content -->
+                <div class="container-fluid">
+                    <!-- Page Heading -->
+                    {% if title is defined %}
+                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                        <h1 class="h3 mb-0">{{ title }}</h1>
+                        {% block heading %}
+                        {% endblock %}
                     </div>
-                  </div>
-                </form>
-              </div>
-            </li>
-
-            <!-- Nav Item - Alerts -->
-            <li class="nav-item dropdown no-arrow mx-1">
-              <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-bell fa-fw"></i>
-                <!-- Counter - Alerts -->
-                <span class="badge badge-danger badge-counter"></span>
-              </a>
-              <!-- Dropdown - Alerts -->
-              <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
-                <h6 class="dropdown-header">
-                  Alerts Center
-                </h6>
-                <a class="dropdown-item text-center small text-gray-500" href="#">No Alerts</a>
-              </div>
-            </li>
-
-            <div class="topbar-divider d-none d-sm-block"></div>
-
-            <!-- Nav Item - User Information -->
-            <li class="nav-item dropdown no-arrow">
-              <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ current_user }}</span>
-                <img class="img-profile rounded-circle" src="{{ current_user.get_avatar() }}">
-              </a>
-              <!-- Dropdown - User Information -->
-              <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="#">
-                  <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Profile
-                </a>
-                <a class="dropdown-item" href="#">
-                  <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Settings
-                </a>
-                <a class="dropdown-item" href="#">
-                  <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Activity Log
-                </a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{{ url_for('logout') }}">
-                  <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Logout
-                </a>
-              </div>
-            </li>
-
-          </ul>
-
-        </nav>
-        <!-- End of Topbar -->
-
-        <!-- Begin Page Content -->
-        <div class="container-fluid">
-
-          <!-- Page Heading -->
-          {% if title is defined %}
-          <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 mb-0">{{ title }}</h1>
-            {% block heading %}
-            {% endblock %}
-          </div>
-          {% endif %}
-
-          <!-- Content -->
-           {% block body %}
-           {% endblock %}
-          </div>
-        <!-- /.container-fluid -->
-
-      </div>
-      <!-- End of Main Content -->
-
+                    {% endif %}
+                    <!-- Content -->
+                    {% block body %}
+                    {% endblock %}
+                </div>
+                <!-- /.container-fluid -->
+            </div>
+            <!-- End of Main Content -->
+        </div>
+        <!-- End of Content Wrapper -->
     </div>
-    <!-- End of Content Wrapper -->
-
-  </div>
-  <!-- End of Page Wrapper -->
-
-  <!-- Scroll to Top Button-->
-  <a class="scroll-to-top rounded" href="#page-top">
-    <i class="fas fa-angle-up"></i>
-  </a>
-
-{% block modals %}
-{% endblock %}
-
+    <!-- End of Page Wrapper -->
+    <!-- Scroll to Top Button-->
+    <a class="scroll-to-top rounded" href="#page-top">
+        <i class="fas fa-angle-up"></i>
+    </a>
+    {% block modals %}
+    {% endblock %}
 <script src="https://unpkg.com/popper.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -224,6 +187,11 @@
 {{ moment.include_moment() }}
 {% block scripts %}
 {% endblock %}
-<script type="text/javascript">$(function () {$('[data-toggle="tooltip"]').tooltip()})</script>
+<script type="text/javascript">$(function () {$('[data-toggle="tooltip"]').tooltip()})
+    $("form").each(function() {
+      $(this)[0].reset()
+    });
+</script>
 </body>
 </html>
+
